argo-events-demo/assets/deployment-flask.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
spec:
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: rg.fr-par.scw.cloud/katacoda/flask-argo:1.0.15
          ports:
            - name: web
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask
  type: ClusterIP
